footer position corrected for proper display on small desktop

--- a/css/style.scss
+++ b/css/style.scss
@@ -880,8 +880,7 @@ section {
   color: $white;
   width: 100%;
   z-index: 3;
-  position: absolute;
-  bottom: 0;
+  position: relative;
 }
 
 .footer--content {
